# ai-capstone

./: README.md  dev  prod  pyproject.toml
core/: settings.py  urls.py
frontend/: package.json  urls.py  views.py  webpack.config.js
frontend/public/: index.html
frontend/src/: index.js  index.jsx
frontend/src/components/copyRight/: copyRight.css  copyRight.jsx
frontend/src/components/graph/: graph.jsx
frontend/src/components/intro/: intro.css  intro.jsx
frontend/src/components/navbar/: navabar.jsx  navbar.css  navbar.jsx
frontend/src/pages/exam/ch1/: exam01.css  exam01.jsx  exam02.css  exam02.jsx
frontend/src/pages/exam/ch2/: exam03.css  exam03.jsx  exam04.jsx
frontend/src/pages/exam/ch3/: exam05.jsx  exam06.jsx
frontend/src/pages/intro/: intro.jsx
frontend/src/pages/web-ch2/: web-ch2.css  web-ch2.jsx
frontend/static/frontend/: main.js  main.js.LICENSE.txt
frontend/templates/frontend/: index.html
frontend/templates/frontend/ch4/: exam07.html  exam08.html  exam09.html  exam10.html  exam11.html  exam12.html
static/frontend/: main.js  main.js.LICENSE.txt
