[tool.poetry]
name = "ai-capstone"
version = "0.1.0"
description = ""
authors = ["Creeper Eye <iostream1204@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
uwsgi = "^2.0.26"
djangorestframework = "^3.15.2"
django-filter = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
